# linux-tools

./: Readme.md
.github/workflows/: build-apt-packages.yaml
auto-shutdown/: README.md  auto-shutdown.service  auto-shutdown.sh  auto-shutdown.timer  install_service.sh
connection-monitor/: README.md  connection-monitor.sh
github-action-top/: README.md  main.py  pyproject.toml
intel-cpu-log/: turbostat-log.sh
jetson-gpio-shutdown/: README.md  Readme.md  install_service.sh  jetson-gpio-shutdown.service  jetson-gpio-shutdown.sh  uninstall_service.sh
jetson-recorder/: Readme.md  install_service.sh  jetson-recorder.service  jetson-recorder.sh  uninstall_service.sh
local-monitoring/: README.md  docker-compose.yml  msu_dashboard.json  prometheus.yml
recorder/: Readme.md  install_service.sh  recorder-cleanup.sh  recorder.service.tpl  recorder.sh  uninstall_service.sh
rtsp-recorder/: .gitignore  Makefile  Readme.md
rtsp-recorder/debian/: changelog  control  install  postinst  prerm  rtsp-recorder.service
rtsp-recorder/rtsp-recorder/: recording.sh
valkey/: Readme.md  build_package.sh
valkey/debian/: changelog  control  install  postinst  prerm  valkey.service
wol-http-trigger/: README.md  install_user_service.sh  wol-http-trigger.service  wol_http_server.py
